[package]
name = "kcp-v-quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
benchmark-rs = "0.1.1"
poloto = "19.1.2"
s2n-quic = "1.28.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio_kcp = "0.9.6"
